--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.75",
     "@tailwindcss/vite": "^4.0.9",
-    "gsap": "^3.12.7",
-    "matter-js": "^0.20.0",
+    "motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.2.0",
     "tailwindcss": "^4.0.9"
   },
