--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.75",
     "@tailwindcss/vite": "^4.0.9",
+    "dotenv": "^16.5.0",
+    "emailjs-com": "^3.2.0",
     "motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
