--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^0.9.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.75",
