--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
